--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "prop-types": "^15.8.1",
     "storybook": "^8.0.0",
-    "webpack": "^5.90.3"
+    "webpack": "5.90.3"
   },
   "publishConfig": {
     "access": "public"
