--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eject": "react-scripts eject",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "deploy": "npm version patch && npm publish"
+    "deploy": "npm version patch && npm publish --access=public"
   },
   "eslintConfig": {
     "extends": [
